default/objects/Global_Configuration__c/Global_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global configuration options for Performance Management.</description>
    <label>Global Configuration</label>
</CustomObject>