default/objects/Global_Configuration__c/fields/Aligned_Objectives_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Objectives_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not Aligned Objectives are enabled across the organisation.</description>
    <inlineHelpText>Whether or not Aligned Objectives are enabled across the organisation.</inlineHelpText>
    <label>Aligned Objectives Enabled</label>
    <type>Checkbox</type>
</CustomField>