default/objects/Global_Configuration__c/fields/Company_Objective_Options__c.field-meta.xml
<CustomField>
    <fullName>Company_Objective_Options__c</fullName>
    <label>Company Objective Options</label>
    <type>TextArea</type>
</CustomField>