default/objects/Global_Configuration__c/fields/Objective_Category_Options__c.field-meta.xml
<CustomField>
    <fullName>Objective_Category_Options__c</fullName>
    <label>Objective Category Options</label>
    <type>TextArea</type>
</CustomField>