default/objects/Global_Configuration__c/fields/Objective_Priority_Options__c.field-meta.xml
<CustomField>
    <fullName>Objective_Priority_Options__c</fullName>
    <label>Objective Priority Options</label>
    <type>TextArea</type>
</CustomField>