default/objects/Global_Configuration__c/fields/Suppress_Emails__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether emails (e.g. for Notifications) are suppressed - used to avoid using up org email allowance during testing.</description>
    <label>Suppress Emails</label>
    <type>Checkbox</type>
</CustomField>